    Debian kernel 2.6.15.
  * Improved common/020-init-image including better code formating and
    documentation.
  * Converted set-arch modules to be a common one. For this dpkg use was
    remove. Support for error messages translation was also added.
 
  [ Gustavo Franco ]
  * po/pt_BR.po:
    - Add po/ltsp.pot Portuguese Brazilian translation by myself.

 -- Otavio Salvador <otavio@debian.org>  Tue,  6 Jun 2006 01:51:25 -0300

ltsp (0.87debian1) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * New upstream release from ubuntu.
  * Make ltsp-build-client report error or success at the end of its
    run. (Closes: #360411)
  * Copy ltsp-client depend 'initramfs-tools (>= 0.11) |
    initrd-netboot-tools' into build-depends, to reduce the chance of
    building on platforms where vital parts of the boot framework is
    missing.  Copied ltsp-server depends 'atftpd | tftpd-hpa, syslinux
    | mknbi | mkvmlinuz | aboot' into build-depends for the same
    reason.  No use pretending to work on archs where LTSP do not work
    yet.
  * Keep init.d scripts ifupdown and networking to make sure the
    loopback device is enabled.  (Closes: #358584)
  * Increase warning level when compiling getltscfg, and fix a few
    compiler warnings discovered this way.
  
  [ Vagrant Cascadian and Otavio Salvador at Debcamp6 ]
  * Rewrote all ltsp-build-client application to use a plugin system and
    also be pluggable enough to reduce the amount of the diff between
    Debian and Ubuntu.

  [ Otavio Salvador ]
  * Sync with Oliver's dapper branch.
  * Add 030-exports in common plugins letting it disabled by default.
    (Closes: #360408, #360407)
  * Set OVERRIDE_EXPORTS to true in Ubuntu since it's the current
    behaviour in their package.
  * Don't include /opt/ltsp in package. In this way, we avoid a lintian
    warning.
  * Bump Standards-Version to 3.7.2 (no changes).
  * Add possibility to specify a configuration file in commandline and