@@ -8,22 +8,26 @@
 DEBVER=$(shell dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p')
 DEB_BUILD_PROG:=debuild --preserve-envvar PATH --preserve-envvar CCACHE_DIR -us -uc $(DEB_BUILD_PROG_OPTS)
 
-
-build: build-stamp
-build-stamp:
-	dh_testdir
-
+update-po:
     # Build pot file for our scripts
-	FILES=""
+	@FILES=""
+	@echo -n "Updating ltsp.pot... "; \
 	for f in server/ltsp-build-client server/plugins/*/*; do \
 		FILES="$$FILES $$f"; \
 	done; \
-	xgettext --language=Shell -o po/ltsp.pot $$FILES
+	xgettext --language=Shell -o po/ltsp.pot $$FILES; \
+	echo done
 
+	@echo "Merging old translations..."; \
 	(cd po; \
 	for f in *.po; do \
 		msgmerge -U $$f ltsp.pot; \
+		echo -n "$$f: "; msgfmt --statistics $$f; \
 	done)
+
+build: build-stamp update-po
+build-stamp:
+	dh_testdir
 
 	$(MAKE) -C client/getltscfg
 	cd client/lp_server && ./configure --prefix=/usr
